<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representativePhoto"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile"
            android:contentDescription="@string/profile_photo"
            app:profileImage="@{representative.official.photoUrl}"/>

        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/wwwIcon"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/facebookIcon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/twwitterIcon"
            app:srcCompat="@drawable/ic_twitter" />

        <TextView
            android:id="@+id/officialText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="President"/>

        <TextView
            android:id="@+id/nameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:text="@{representative.official.name}"
            app:layout_constraintBottom_toTopOf="@+id/partyText"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toBottomOf="@+id/officialText"
            tools:text="Name"/>

        <TextView
            android:id="@+id/partyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            tools:text="Party"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>